--- a/GymApp/Views/Shared/_Layout.cshtml
+++ b/GymApp/Views/Shared/_Layout.cshtml
@@ -4,74 +4,133 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - GymApp</title>
+    <link rel="stylesheet" href="~/css/entypo.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/socicon.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/custom.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GymApp.styles.css" asp-append-version="true" />
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GymApp</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+    <div class="navbar-container">
+        <div class="bg-light navbar-light" data-sticky="top">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" id="logo-text">Gym App</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="icon-menu h4"></i>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Gym" asp-action="Index">Gyms</a>
+                                <a class="nav-link" asp-area="" asp-controller="user" asp-action="Index">Find GymGoers</a>
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="users" asp-action="Index">GymGoers</a>
+                            <a class="nav-link" asp-area="" asp-controller="Gym" asp-action="Index">Find Gyms</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="WorkoutProgram" asp-action="Index">Workout Programs</a>
+                            <a class="nav-link" asp-area="" asp-controller="WorkoutProgram" asp-action="Index"> Find Workout Programs</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                            </li>    
-                        } 
                     </ul>
-                </div>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Dashboard</a>
+                                    <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                                        <a class="dropdown-item" href="pages-landing.html">
+                                            <span class="h6 mb-0">Create Club</span>
+                                        </a>
+
+                                    <div class="dropdown-divider"></div>
+
+                                        <a class="dropdown-item" href="pages-app.html">
+                                            <span class="h6 mb-0">Create Race</span>
+                                        </a>
+
+                                    <div class="dropdown-divider"></div>
+
+                                        <a class="dropdown-item" href="pages-inner.html">
+                                            <span class="h6 mb-0">Edit User Profile</span>
+                                        </a>
+                                    <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="pages-inner.html">
+                                            <span class="h6 mb-0">Manage Your Gyms/Workoutprograms</span>
+                                        </a>
+                                    <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="pages-inner.html">
+                                            <span class="h6 mb-0">Logout</span>
+                                        </a>
+                                    </div>
+                            </li>
+                        </ul>     
+                    }
+                    else
+                    {
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="Account"
+                                asp-action="Register">Sign up</a>
+                                    <span>&nbsp;or&nbsp;</span><a asp-area="" asp-controller="Account"
+                                asp-action="Login">Sign in</a>
+                            </li>
+                        </ul>
+                    }
+
+                    </div>
+                <!--end nav collapse-->
+                </nav>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+                <!--end of container-->
+        </div>
+    </div>
+        <div class="main-container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+     <footer class="bg-gray text-light footer-long">
         <div class="container">
-            &copy; 2022 - GymApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+          <div class="row">
+            <div class="col-12 col-md-3">
+              <a class="text" asp-area="" asp-controller="Home" asp-action="Index" id="logo-text">GymApp</a>
+            </div>
+            <!--end of col-->
+            <div class="col-12 col-md-9">
+              <span class="h5">Gym Platform.</span>
+              <div class="row no-gutters">
+                <div class="col-6 col-lg-3">
+                  <h6>Find Gyms</h6>
+                  <ul class="list-unstyled">
+                    <li>
+                      <a href="index.html">Gyms in Dublin</a>
+                    </li>
+                    <li>
+                      <a href="pages-landing.html">Gyms in Cork</a>
+                    </li>
+                    <li>
+                      <a href="pages-app.html">Gyms in Galway</a>
+                    </li>
+                  </ul>
+                </div>
+                <!--end of col-->
+              </div>
+              <!--end of row-->
+            </div>
+            <!--end of col-->
+          </div>
+          <!--end of row-->
         </div>
-    </footer>
-     <script src="~/js/jquery.min.js"></script>
+        <!--end of container-->
+      </footer>
+    <script src="~/js/jquery.min.js"></script>
     <script src="~/js/bootstrap.js"></script>
     <script src="~/js/theme.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
