--- a/GymApp/Views/WorkoutProgram/Detail.cshtml
+++ b/GymApp/Views/WorkoutProgram/Detail.cshtml
@@ -1,70 +1,5 @@
 ﻿@model WorkoutProgram
-
-<!-- Page Content -->
-<div class="container">
-
-    <!-- Portfolio Item Heading -->
-    <h1 class="my-4">Page Heading
-      <small>Secondary Text</small>
-    </h1>
-  
-    <!-- Portfolio Item Row -->
-    <div class="row">
-  
-      <div class="col-md-8">
-        <img class="img-fluid" src="@Model.Image" alt="">
-      </div>
-  
-      <div class="col-md-4">
-        <h3 class="my-3">@Model.Title</h3>
-       <p>@Model.Description</p>
-        <h3 class="my-3">Project Details</h3>
-        <ul>
-          <li>@Model.WorkoutProgramCategory</li>
-      </ul>
-      </div>
-  
-    </div>
-    <!-- /.row -->
-  
-    <!-- Related Projects Row -->
-    <h3 class="my-4">Related Projects</h3>
-  
-    <div class="row">
-  
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-              <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="">
-            </a>
-      </div>
-  
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-              <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="">
-            </a>
-      </div>
-  
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-              <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="">
-            </a>
-      </div>
-  
-      <div class="col-md-3 col-sm-6 mb-4">
-        <a href="#">
-              <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="">
-            </a>
-      </div>
-  
-    </div>
-    <!-- /.row -->
-  
-  </div>
-  <!-- /.container -->
-  
-
-
-@* <div class="main-container">
+ <div class="main-container">
       <nav aria-label="breadcrumb" role="navigation" class="bg-primary text-white">
         <div class="container">
           <div class="row justify-content-center">
@@ -74,7 +9,6 @@
                 </li>
                 <li class="breadcrumb-item"><a href="pages-app.html">Find</a>
                 </li>
-                <li class="breadcrumb-item active" aria-current="page">Gyms in @Model.Address.City, @Model.Address.Province</li>
               </ol>
             </div>
             <!--end of col-->
@@ -93,9 +27,8 @@
             <div class="col-lg-4 d-flex flex-column justify-content-between mr-auto ml-auto">
               <div>
                 <h1 class="mb-2">@Model.Title</h1>
-                <h2 class="lead mb-3">@Model.Address.City, @Model.Address.Province</h2>
                 <div>
-                  <span class="badge badge-secondary mr-3">@Model.GymCategory</span>
+                  <span class="badge badge-secondary mr-3">@Model.WorkoutProgramCategory</span>
                 </div>
                 <div>
                   <ul class="list-inline text-small d-inline-block mb-3">
@@ -169,11 +102,147 @@
                   </form>
                 </div>
                 <ul class="list-group list-group-flush list-group-comments">
+
+@*                  <li class="list-group-item py-4">
+                    <div class="media">
+                      <img alt="Image" src="assets/img/avatar-female-2.jpg" class="avatar avatar-sm" />
+                      <div class="media-body">
+                        <div class="mb-2">
+                          <span class="h6 mb-0">Kelly Fraiser</span>
+                          <span class="text-muted">Making awesome products</span>
+                        </div>
+                        <p>
+                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                        </p>
+                        <div class="d-flex align-items-center">
+                          <div class="mr-2">
+                            <button class="btn btn-sm btn-outline-primary">Reply</button>
+                            <button class="btn btn-sm btn-outline-primary"><i class="icon-thumbs-up"></i>&nbsp;(2)</button>
+                          </div>
+                          <small class="text-muted">1st Dec 2017 • 10:15am</small>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item py-4">
+                    <div class="media">
+                      <img alt="Image" src="assets/img/avatar-male-6.jpg" class="avatar avatar-sm" />
+                      <div class="media-body">
+                        <div class="mb-2">
+                          <span class="h6 mb-0">Tim Lester</span>
+                          <span class="text-muted">Interface Designer </span>
+                        </div>
+                        <p>
+                          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                        </p>
+                        <div class="d-flex align-items-center">
+                          <div class="mr-2">
+                            <button class="btn btn-sm btn-outline-primary">Reply</button>
+                            <button class="btn btn-sm btn-outline-primary"><i class="icon-thumbs-up"></i>
+                            </button>
+                          </div>
+                          <small class="text-muted">1st Dec 2017 • 10:15am</small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="media">
+                      <img alt="Image" src="assets/img/avatar-female-5.jpg" class="avatar avatar-sm" />
+                      <div class="media-body">
+                        <div class="mb-2">
+                          <span class="h6 mb-0">Carly Pemberton</span>
+                          <span class="text-muted">Freelance Product Engineer</span>
+                        </div>
+                        <p>
+                          Omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
+                        </p>
+                        <div class="d-flex align-items-center">
+                          <div class="mr-2">
+                            <button class="btn btn-sm btn-outline-primary">Reply</button>
+                            <button class="btn btn-sm btn-outline-primary"><i class="icon-thumbs-up"></i>(4)</button>
+                          </div>
+                          <small class="text-muted">1st Dec 2017 • 10:15am</small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="media">
+                      <img alt="Image" src="assets/img/graphic-product-paydar-thumb.jpg" class="avatar avatar-sm" />
+                      <div class="media-body">
+                        <div class="mb-2">
+                          <span class="h6 mb-0">Luke Carol</span>
+                          <span class="text-muted">Product Designer</span>
+                        </div>
+                        <p>
+                          Adipisci velit, sed quia non numquam eius modi tempora
+                        </p>
+                        <div class="d-flex align-items-center">
+                          <div class="mr-2">
+                            <button class="btn btn-sm btn-outline-primary">Reply</button>
+                            <button class="btn btn-sm btn-outline-primary"><i class="icon-thumbs-up"></i>
+                            </button>
+                          </div>
+                          <small class="text-muted">1st Dec 2017 • 10:15am</small>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item py-4">
+                    <div class="media">
+                      <img alt="Image" src="assets/img/avatar-male-3.jpg" class="avatar avatar-sm" />
+                      <div class="media-body">
+                        <div class="mb-2">
+                          <span class="h6 mb-0">Pip Thompson</span>
+                          <span class="text-muted">Development at Kin</span>
+                        </div>
+                        <p>
+                          Natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                        </p>
+                        <div class="d-flex align-items-center">
+                          <div class="mr-2">
+                            <button class="btn btn-sm btn-outline-primary">Reply</button>
+                            <button class="btn btn-sm btn-outline-primary"><i class="icon-thumbs-up"></i>&nbsp;(1)</button>
+                          </div>
+                          <small class="text-muted">1st Dec 2017 • 10:15am</small>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item py-4">
+                    <div class="media">
+                      <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-sm" />
+                      <div class="media-body">
+                        <div class="mb-2">
+                          <span class="h6 mb-0">Daniel Cameron</span>
+                          <span class="text-muted">Industrial Designer at Kin</span>
+                        </div>
+                        <p>
+                          Nam HTML tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est
+                        </p>
+                        <div class="d-flex align-items-center">
+                          <div class="mr-2">
+                            <button class="btn btn-sm btn-outline-primary">Reply</button>
+                            <button class="btn btn-sm btn-outline-primary"><i class="icon-thumbs-up"></i>&nbsp;(1)</button>
+                          </div>
+                          <small class="text-muted">1st Dec 2017 • 10:15am</small>
+                        </div>
+                      </div>
+                    </div>
+                  </li>*@
+
                 </ul>
               </div>
+
             </div>
             <!--end of col-->
             <div class="col-12 col-md-4">
+@*              <div class="card card-borderless bg-secondary">
+                <a class="card-body" href="#">
+                  <div class="d-flex justify-content-between mb-3">
+                    <img alt="Image" src="assets/img/logo-w-gradient.svg" />
+                    <span class="title-decorative">Sponsor</span>
+                  </div>
+                  <span class="h6">A robust suite of styled elements and pages for Bootstrap 4</span>
+                </a>
+              </div>*@
               <!-- end card -->
               <div class="card">
                 <ul class="list-group list-group-flush">
@@ -202,7 +271,160 @@
                     </div>
                   </li>
                 </ul>
-              </div>            
+              </div>
+             @* <div class="card">
+                <div class="card-header d-flex justify-content-between">
+                  <div>
+                    <span class="h6">Contributors</span>
+                  </div>
+                  <a href="#">View all &rsaquo;</a>
+                </div>
+                <div class="card-body">
+                  <ul class="list-unstyled list-spacing-sm">
+                    <li>
+                      <a class="media" href="#">
+                        <img alt="Image" src="assets/img/avatar-male-1.jpg" class="avatar avatar-sm mr-3" />
+                        <div class="media-body">
+                          <span class="h6 mb-0">Daniel Cameron</span>
+                          <span class="text-muted">Product Designer</span>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="media" href="#">
+                        <img alt="Image" src="assets/img/avatar-female-1.jpg" class="avatar avatar-sm mr-3" />
+                        <div class="media-body">
+                          <span class="h6 mb-0">Caitlyn Halsy</span>
+                          <span class="text-muted">Marketing Professional</span>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="media" href="#">
+                        <img alt="Image" src="assets/img/avatar-male-2.jpg" class="avatar avatar-sm mr-3" />
+                        <div class="media-body">
+                          <span class="h6 mb-0">Toby Marsh</span>
+                          <span class="text-muted">Developer</span>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="media" href="#">
+                        <img alt="Image" src="assets/img/avatar-female-2.jpg" class="avatar avatar-sm mr-3" />
+                        <div class="media-body">
+                          <span class="h6 mb-0">Lucille Freebody</span>
+                          <span class="text-muted">Graphic Designer</span>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>*@
+              <!-- end card -->
+              @*<div class="card">
+                <div class="card-header d-flex justify-content-between">
+                  <div>
+                    <span class="h6">Related Products</span>
+                  </div>
+                  <a href="#">View all &rsaquo;</a>
+                </div>
+                <div class="card-body">
+                  <ul class="list-unstyled list-spacing-sm">
+                    <li>
+                      <div class="media">
+                        <a href="#">
+                          <img alt="Image" src="assets/img/graphic-product-bench-thumb.jpg" class="avatar avatar-square rounded mr-3" />
+                        </a>
+                        <div class="media-body">
+                          <a href="#">
+                            <span class="h6">Bench</span>
+                          </a>
+                          <span class="badge badge-secondary">Productivity</span>
+                          <div class="text-muted">
+                            <ul class="list-inline">
+                              <li class="list-inline-item">
+                                <small><i class="icon-heart"></i> 373</small>
+                              </li>
+                              <li class="list-inline-item">
+                                <small><i class="icon-message"></i> 62</small>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="media">
+                        <a href="#">
+                          <img alt="Image" src="assets/img/graphic-product-kin-thumb.jpg" class="avatar avatar-square rounded mr-3" />
+                        </a>
+                        <div class="media-body">
+                          <a href="#">
+                            <span class="h6">Kin</span>
+                          </a>
+                          <span class="badge badge-secondary">Lifestyle</span>
+                          <div class="text-muted">
+                            <ul class="list-inline">
+                              <li class="list-inline-item">
+                                <small><i class="icon-heart"></i> 84</small>
+                              </li>
+                              <li class="list-inline-item">
+                                <small><i class="icon-message"></i> 21</small>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="media">
+                        <a href="#">
+                          <img alt="Image" src="assets/img/graphic-product-paydar-thumb.jpg" class="avatar avatar-square rounded mr-3" />
+                        </a>
+                        <div class="media-body">
+                          <a href="#">
+                            <span class="h6">Paydar</span>
+                          </a>
+                          <span class="badge badge-secondary">Productivity</span>
+                          <div class="text-muted">
+                            <ul class="list-inline">
+                              <li class="list-inline-item">
+                                <small><i class="icon-heart"></i> 253</small>
+                              </li>
+                              <li class="list-inline-item">
+                                <small><i class="icon-message"></i> 19</small>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="media">
+                        <a href="#">
+                          <img alt="Image" src="assets/img/graphic-product-pipeline-thumb.jpg" class="avatar avatar-square rounded mr-3" />
+                        </a>
+                        <div class="media-body">
+                          <a href="#">
+                            <span class="h6">pipeline.js</span>
+                          </a>
+                          <span class="badge badge-secondary">Development</span>
+                          <div class="text-muted">
+                            <ul class="list-inline">
+                              <li class="list-inline-item">
+                                <small><i class="icon-heart"></i> 84</small>
+                              </li>
+                              <li class="list-inline-item">
+                                <small><i class="icon-message"></i> 25</small>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>*@
               <!-- end card -->
             </div>
             <!--end of col-->
@@ -211,4 +433,3 @@
         </div>
         <!--end of container-->
       </section>
-      </div>>*@
