--- a/GymApp/wwwroot/css/custom.css
+++ b/GymApp/wwwroot/css/custom.css
@@ -1,8 +1,12 @@
-﻿/* 
-/* 
-/*  custom.css
-/*
-/*  If not using Gulp and Sass, add your custom CSS below then include it
-/*  in your page by adding a reference to assets/css/custom.css in the head of each page.
-/*
-*/
+﻿@import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
+
+#logo-text {
+    font-family: "Tangerine", sans-serif;
+    font-size: 2rem;
+    color: palevioletred;
+}
+
+#logo-green {
+    font-family: "Tangerine", sans-serif;
+    font-size: 2rem;
+}
