--- a/GymApp/Views/WorkoutProgram/Delete.cshtml
+++ b/GymApp/Views/WorkoutProgram/Delete.cshtml
@@ -23,9 +23,10 @@
         <span asp-validation-for="WorkoutProgramCategory" class="text-danger"></span>
     </div>
     </form>
-    <div class="form-group">
+    <button type="submit" class="btn btn-danger">Confirm</button>
+    @*<div class="form-group">
         <form action="Delete" method="post">
             <input type="hidden" asp-for="Id" />
             <input type="submit" value="Confirm" class="btn btn-danger float-right mt-3" />
-        </form>
+        </form>*@
      </div>
