--- a/GymApp/Views/WorkoutProgram/Delete.cshtml
+++ b/GymApp/Views/WorkoutProgram/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GymApp.Data.Enum
 @model WorkoutProgram
 
-<h1>Are you sure you want to delete this Gym?</h1>
+<h1>Are you sure you want to delete this Workout Program?</h1>
 
 <form method="post" asp-action="Delete" enctype="multipart/form-data">
     <input type="hidden" value="Id" id="Id" />
@@ -22,11 +22,11 @@
         </select>
         <span asp-validation-for="WorkoutProgramCategory" class="text-danger"></span>
     </div>
-    </form>
     <button type="submit" class="btn btn-danger">Confirm</button>
+    </form>
     @*<div class="form-group">
         <form action="Delete" method="post">
             <input type="hidden" asp-for="Id" />
             <input type="submit" value="Confirm" class="btn btn-danger float-right mt-3" />
         </form>*@
-     </div>
+     @*</div>*@
